adicionado cobertura de teste para o endpoint profile